# nrs-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-docker.rs  build.rs  config-docker.toml  config.toml  docker-compose-dev.yml  docker-compose.yml
docs/: database.md
postgresql/: create-1.sql  init.sql
proto/: newsrecommend.proto
py_rpc/: .env  requirements.txt  run.py
py_rpc/src/model/: config.py
py_rpc/src/proto/: __init__.py  data.proto  data_pb2.py  data_pb2_grpc.py  data_service.py
src/: api.rs  backend.rs  config.rs  log.rs  main.rs  rpc.rs  server.rs  test.rs  util.rs
src/common/: mod.rs
src/common/data/: mod.rs  news.rs  tag.rs  user.rs
src/common/object/: mod.rs  news.rs  user.rs
src/controller/: mod.rs
src/controller/admin/: mod.rs
src/controller/news/: mod.rs
src/controller/user/: mod.rs
