[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.56", features = [] }
poem-openapi = { version = "2.0.27", features = ["swagger-ui", "chrono", "time"] }
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.99"
tokio = {version = "1.28.2", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
redis = { version = "0.23.0", features = ["aio", "tokio-comp", "connection-manager"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time", "chrono"] }
clap = "4.3.8"
anyhow = "1.0.71"
argon2 = "0.5.0"
hex = "0.4.3"
chrono = "0.4.26"
sha2 = "0.10.7"
hmac = "0.12.1"
jwt = "0.16.0"
